--- a/apps/chronicler/webui/src/components/WikiPage.module.css
+++ b/apps/chronicler/webui/src/components/WikiPage.module.css
@@ -1007,8 +1007,9 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  right: 0;
+  width: 100%;
   height: 12px;
+  display: block;
   z-index: 2;
 }
 
